# EasyIsing

./: LICENSE  README.md  pyproject.toml
EasyIsing/: _Ising.py  _IsingC.py  _IsingCupy.py  _IsingNumpy.py  __init__.py  ising.c
examples/: MagneticHysteresisLoop.ipynb  Performance.ipynb  SpecificHeat.ipynb
examples/SpecificHeatData/: 1039678728.csv  108776479.csv  1188427133.csv  1198429522.csv  1202595797.csv  120671775.csv  1294315176.csv  1373142219.csv  1373682210.csv  1420451203.csv  1440261770.csv  1455936288.csv  1572293808.csv  1794565730.csv  1799928072.csv  1847023547.csv  1915351804.csv  2023529643.csv  203579993.csv  205836267.csv  2160766543.csv  2335034638.csv  2339143680.csv  2415541727.csv  2416315984.csv  2436880276.csv  2526708778.csv  2535359556.csv  2585258576.csv  2626465105.csv  2633169343.csv  2759302138.csv  27605955.csv  2808941839.csv  2823033224.csv  2998302446.csv  3013817588.csv  3038877087.csv  3143632878.csv  3246624152.csv  (+20 more)
